Please check: https://github.com/INTER-Mediator/INTER-Mediator
Also the Migration Guide (Japanese) might be informative:
  https://inter-mediator.info/ja/for-developers/migration.html

Ver.14 (in Development)
- From this version, minimum supporting PHP version is 8.1.
- GitHub Action php-legacy.yml was deleted. Also the INTER-Mediator-UnitTest_Legacy the unit test with PHP 7 was removed.

Ver.13 (October 26, 2024)
- In the INTERMediator_DBAdapter, Codes using XMLHttpRequest are replaced with fetch function.
- Variable $extraButtons in the params.php file adds buttons on the authentication panel. The value has to be associated
  array, and the key is button name and the value is moving URL. It assumes that the OAuth button to authenticating.
- 2-factor authentication is supported with e-mail notification. Also the authentication processes are refactored.
- The IMLibContext class has new property 'count', 'resultCount' and 'totalCount' about results of queried recordset.
- The enrollment and password reset samples are updated. They are in samples/Auth_Support/User_Enrollment and PasswordReset.
- The mailtemplate editing page is added in samples/Mail_Support/MySQL_mailtemplate.html
- Field values from SAML attributes can merge from multiple entries.
- Variables $limitEnrollSecond and $limitPwChangeSecond in the params.php file can specify the limit seconds for
  the enrollment mail and password reset mail.
- INTERMediatorOnPage.authPanelExp and INTERMediatorOnPage.authPanelExp2FA can display any explanation
  on authentication panels.
- In the params.php file, variables $authPanelTitle, $authPanelTitle2FA, $authPanelExp and $authPanelExp2FA can
  describe and set any strings including html. These are elements of auth panels as the same name properties of
  INTERMediatorOnPage object.
- INTERMediatorOnPage.loguout(url) clears all credential info, also move to url or reload current page. On using SAML,
  moving to logoutURL from SAML SP.